// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> Should match the bullet list snapshot 1`] = `
.c3 {
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 16px;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
  counter-reset: count;
}

.c0 li {
  margin-left: 24px;
  position: relative;
}

.c0 li:before {
  content: counter(count) '.';
  counter-increment: count;
  position: absolute;
  right: 100%;
  margin-top: 8px;
  margin-right: 8px;
}

<List
  bullet=""
  divided={false}
  inline={false}
  items={
    Array [
      "Tomato sauce",
      "Mustard",
      "Barbecue sauce",
      "Red-wine vinegar",
      "Salsa",
      "Hot pepper sauce",
    ]
  }
  ordered={true}
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#fff5f5",
          "300": "#f88e86",
          "500": "#ec584e",
          "700": "#e91b0c",
          "900": "#ac001a",
        },
        "neutral": Object {
          "0": "#ffffff",
          "100": "#f2f2f2",
          "1000": "#000000",
          "300": "#e0e0e0",
          "500": "#999999",
          "700": "#424242",
          "900": "#191919",
        },
        "primary": Object {
          "100": "#E5EDFC",
          "300": "#89AAE7",
          "500": "#0CC0EA",
          "700": "#1250C4",
          "900": "#002F7B",
        },
        "secondary": Object {
          "100": "#F7B0C8",
          "300": "#F278A1",
          "500": "#E91E63",
          "700": "#DE0059",
          "900": "#9E003F",
        },
        "success": Object {
          "100": "#dcedc8",
          "300": "#c9eda2",
          "500": "#7ed321",
          "700": "#3b610f",
          "900": "#004D40",
        },
        "warning": Object {
          "100": "#ffefd6",
          "300": "#ffda6a",
          "500": "#ffc107",
          "700": "#f09100",
          "900": "#d14900",
        },
      },
    }
  }
>
  <OrderedList
    bullet=""
    divided={false}
    inline={false}
    items={
      Array [
        "Tomato sauce",
        "Mustard",
        "Barbecue sauce",
        "Red-wine vinegar",
        "Salsa",
        "Hot pepper sauce",
      ]
    }
    ordered={true}
    theme={
      Object {
        "colors": Object {
          "error": Object {
            "100": "#fff5f5",
            "300": "#f88e86",
            "500": "#ec584e",
            "700": "#e91b0c",
            "900": "#ac001a",
          },
          "neutral": Object {
            "0": "#ffffff",
            "100": "#f2f2f2",
            "1000": "#000000",
            "300": "#e0e0e0",
            "500": "#999999",
            "700": "#424242",
            "900": "#191919",
          },
          "primary": Object {
            "100": "#E5EDFC",
            "300": "#89AAE7",
            "500": "#0CC0EA",
            "700": "#1250C4",
            "900": "#002F7B",
          },
          "secondary": Object {
            "100": "#F7B0C8",
            "300": "#F278A1",
            "500": "#E91E63",
            "700": "#DE0059",
            "900": "#9E003F",
          },
          "success": Object {
            "100": "#dcedc8",
            "300": "#c9eda2",
            "500": "#7ed321",
            "700": "#3b610f",
            "900": "#004D40",
          },
          "warning": Object {
            "100": "#ffefd6",
            "300": "#ffda6a",
            "500": "#ffc107",
            "700": "#f09100",
            "900": "#d14900",
          },
        },
      }
    }
  >
    <ol
      className="c0"
    >
      <List.Item
        bullet=""
        content="Tomato sauce"
        icon=""
        key="Tomato sauce"
      >
        <li>
          <ListItem
            bullet=""
          >
            <div
              className="c1"
            >
              <List.Content
                content="Tomato sauce"
                header=""
                subheader=""
              >
                <Content>
                  <div
                    className="c2"
                  >
                    <List.Header>
                      <Header>
                        <span
                          className="c3"
                        >
                          Tomato sauce
                        </span>
                      </Header>
                    </List.Header>
                  </div>
                </Content>
              </List.Content>
            </div>
          </ListItem>
        </li>
      </List.Item>
      <List.Item
        bullet=""
        content="Mustard"
        icon=""
        key="Mustard"
      >
        <li>
          <ListItem
            bullet=""
          >
            <div
              className="c1"
            >
              <List.Content
                content="Mustard"
                header=""
                subheader=""
              >
                <Content>
                  <div
                    className="c2"
                  >
                    <List.Header>
                      <Header>
                        <span
                          className="c3"
                        >
                          Mustard
                        </span>
                      </Header>
                    </List.Header>
                  </div>
                </Content>
              </List.Content>
            </div>
          </ListItem>
        </li>
      </List.Item>
      <List.Item
        bullet=""
        content="Barbecue sauce"
        icon=""
        key="Barbecue sauce"
      >
        <li>
          <ListItem
            bullet=""
          >
            <div
              className="c1"
            >
              <List.Content
                content="Barbecue sauce"
                header=""
                subheader=""
              >
                <Content>
                  <div
                    className="c2"
                  >
                    <List.Header>
                      <Header>
                        <span
                          className="c3"
                        >
                          Barbecue sauce
                        </span>
                      </Header>
                    </List.Header>
                  </div>
                </Content>
              </List.Content>
            </div>
          </ListItem>
        </li>
      </List.Item>
      <List.Item
        bullet=""
        content="Red-wine vinegar"
        icon=""
        key="Red-wine vinegar"
      >
        <li>
          <ListItem
            bullet=""
          >
            <div
              className="c1"
            >
              <List.Content
                content="Red-wine vinegar"
                header=""
                subheader=""
              >
                <Content>
                  <div
                    className="c2"
                  >
                    <List.Header>
                      <Header>
                        <span
                          className="c3"
                        >
                          Red-wine vinegar
                        </span>
                      </Header>
                    </List.Header>
                  </div>
                </Content>
              </List.Content>
            </div>
          </ListItem>
        </li>
      </List.Item>
      <List.Item
        bullet=""
        content="Salsa"
        icon=""
        key="Salsa"
      >
        <li>
          <ListItem
            bullet=""
          >
            <div
              className="c1"
            >
              <List.Content
                content="Salsa"
                header=""
                subheader=""
              >
                <Content>
                  <div
                    className="c2"
                  >
                    <List.Header>
                      <Header>
                        <span
                          className="c3"
                        >
                          Salsa
                        </span>
                      </Header>
                    </List.Header>
                  </div>
                </Content>
              </List.Content>
            </div>
          </ListItem>
        </li>
      </List.Item>
      <List.Item
        bullet=""
        content="Hot pepper sauce"
        icon=""
        key="Hot pepper sauce"
      >
        <li>
          <ListItem
            bullet=""
          >
            <div
              className="c1"
            >
              <List.Content
                content="Hot pepper sauce"
                header=""
                subheader=""
              >
                <Content>
                  <div
                    className="c2"
                  >
                    <List.Header>
                      <Header>
                        <span
                          className="c3"
                        >
                          Hot pepper sauce
                        </span>
                      </Header>
                    </List.Header>
                  </div>
                </Content>
              </List.Content>
            </div>
          </ListItem>
        </li>
      </List.Item>
    </ol>
  </OrderedList>
</List>
`;

exports[`<List /> Should match the default snapshot 1`] = `
.c0 {
  list-style: none;
  margin: 0;
  padding-left: 0;
}

<List
  bullet=""
  divided={false}
  inline={false}
  items={Array []}
  ordered={false}
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#fff5f5",
          "300": "#f88e86",
          "500": "#ec584e",
          "700": "#e91b0c",
          "900": "#ac001a",
        },
        "neutral": Object {
          "0": "#ffffff",
          "100": "#f2f2f2",
          "1000": "#000000",
          "300": "#e0e0e0",
          "500": "#999999",
          "700": "#424242",
          "900": "#191919",
        },
        "primary": Object {
          "100": "#E5EDFC",
          "300": "#89AAE7",
          "500": "#0CC0EA",
          "700": "#1250C4",
          "900": "#002F7B",
        },
        "secondary": Object {
          "100": "#F7B0C8",
          "300": "#F278A1",
          "500": "#E91E63",
          "700": "#DE0059",
          "900": "#9E003F",
        },
        "success": Object {
          "100": "#dcedc8",
          "300": "#c9eda2",
          "500": "#7ed321",
          "700": "#3b610f",
          "900": "#004D40",
        },
        "warning": Object {
          "100": "#ffefd6",
          "300": "#ffda6a",
          "500": "#ffc107",
          "700": "#f09100",
          "900": "#d14900",
        },
      },
    }
  }
>
  <UnorderedList
    bullet=""
    divided={false}
    inline={false}
    items={Array []}
    ordered={false}
    theme={
      Object {
        "colors": Object {
          "error": Object {
            "100": "#fff5f5",
            "300": "#f88e86",
            "500": "#ec584e",
            "700": "#e91b0c",
            "900": "#ac001a",
          },
          "neutral": Object {
            "0": "#ffffff",
            "100": "#f2f2f2",
            "1000": "#000000",
            "300": "#e0e0e0",
            "500": "#999999",
            "700": "#424242",
            "900": "#191919",
          },
          "primary": Object {
            "100": "#E5EDFC",
            "300": "#89AAE7",
            "500": "#0CC0EA",
            "700": "#1250C4",
            "900": "#002F7B",
          },
          "secondary": Object {
            "100": "#F7B0C8",
            "300": "#F278A1",
            "500": "#E91E63",
            "700": "#DE0059",
            "900": "#9E003F",
          },
          "success": Object {
            "100": "#dcedc8",
            "300": "#c9eda2",
            "500": "#7ed321",
            "700": "#3b610f",
            "900": "#004D40",
          },
          "warning": Object {
            "100": "#ffefd6",
            "300": "#ffda6a",
            "500": "#ffc107",
            "700": "#f09100",
            "900": "#d14900",
          },
        },
      }
    }
  >
    <ul
      className="c0"
    />
  </UnorderedList>
</List>
`;

exports[`<List /> Should match the divided list snapshot 1`] = `
.c3 {
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 16px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding-left: 0;
}

.c0 li {
  border-bottom: 1px solid #f2f2f2;
}

.c0 li:last-child {
  border: none;
}

<List
  bullet=""
  divided={true}
  inline={false}
  items={
    Array [
      "Tomato sauce",
      "Mustard",
      "Barbecue sauce",
      "Red-wine vinegar",
      "Salsa",
      "Hot pepper sauce",
    ]
  }
  ordered={false}
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#fff5f5",
          "300": "#f88e86",
          "500": "#ec584e",
          "700": "#e91b0c",
          "900": "#ac001a",
        },
        "neutral": Object {
          "0": "#ffffff",
          "100": "#f2f2f2",
          "1000": "#000000",
          "300": "#e0e0e0",
          "500": "#999999",
          "700": "#424242",
          "900": "#191919",
        },
        "primary": Object {
          "100": "#E5EDFC",
          "300": "#89AAE7",
          "500": "#0CC0EA",
          "700": "#1250C4",
          "900": "#002F7B",
        },
        "secondary": Object {
          "100": "#F7B0C8",
          "300": "#F278A1",
          "500": "#E91E63",
          "700": "#DE0059",
          "900": "#9E003F",
        },
        "success": Object {
          "100": "#dcedc8",
          "300": "#c9eda2",
          "500": "#7ed321",
          "700": "#3b610f",
          "900": "#004D40",
        },
        "warning": Object {
          "100": "#ffefd6",
          "300": "#ffda6a",
          "500": "#ffc107",
          "700": "#f09100",
          "900": "#d14900",
        },
      },
    }
  }
>
  <UnorderedList
    bullet=""
    divided={true}
    inline={false}
    items={
      Array [
        "Tomato sauce",
        "Mustard",
        "Barbecue sauce",
        "Red-wine vinegar",
        "Salsa",
        "Hot pepper sauce",
      ]
    }
    ordered={false}
    theme={
      Object {
        "colors": Object {
          "error": Object {
            "100": "#fff5f5",
            "300": "#f88e86",
            "500": "#ec584e",
            "700": "#e91b0c",
            "900": "#ac001a",
          },
          "neutral": Object {
            "0": "#ffffff",
            "100": "#f2f2f2",
            "1000": "#000000",
            "300": "#e0e0e0",
            "500": "#999999",
            "700": "#424242",
            "900": "#191919",
          },
          "primary": Object {
            "100": "#E5EDFC",
            "300": "#89AAE7",
            "500": "#0CC0EA",
            "700": "#1250C4",
            "900": "#002F7B",
          },
          "secondary": Object {
            "100": "#F7B0C8",
            "300": "#F278A1",
            "500": "#E91E63",
            "700": "#DE0059",
            "900": "#9E003F",
          },
          "success": Object {
            "100": "#dcedc8",
            "300": "#c9eda2",
            "500": "#7ed321",
            "700": "#3b610f",
            "900": "#004D40",
          },
          "warning": Object {
            "100": "#ffefd6",
            "300": "#ffda6a",
            "500": "#ffc107",
            "700": "#f09100",
            "900": "#d14900",
          },
        },
      }
    }
  >
    <ul
      className="c0"
    >
      <List.Item
        bullet=""
        content="Tomato sauce"
        icon=""
        key="Tomato sauce"
      >
        <li>
          <ListItem
            bullet=""
          >
            <div
              className="c1"
            >
              <List.Content
                content="Tomato sauce"
                header=""
                subheader=""
              >
                <Content>
                  <div
                    className="c2"
                  >
                    <List.Header>
                      <Header>
                        <span
                          className="c3"
                        >
                          Tomato sauce
                        </span>
                      </Header>
                    </List.Header>
                  </div>
                </Content>
              </List.Content>
            </div>
          </ListItem>
        </li>
      </List.Item>
      <List.Item
        bullet=""
        content="Mustard"
        icon=""
        key="Mustard"
      >
        <li>
          <ListItem
            bullet=""
          >
            <div
              className="c1"
            >
              <List.Content
                content="Mustard"
                header=""
                subheader=""
              >
                <Content>
                  <div
                    className="c2"
                  >
                    <List.Header>
                      <Header>
                        <span
                          className="c3"
                        >
                          Mustard
                        </span>
                      </Header>
                    </List.Header>
                  </div>
                </Content>
              </List.Content>
            </div>
          </ListItem>
        </li>
      </List.Item>
      <List.Item
        bullet=""
        content="Barbecue sauce"
        icon=""
        key="Barbecue sauce"
      >
        <li>
          <ListItem
            bullet=""
          >
            <div
              className="c1"
            >
              <List.Content
                content="Barbecue sauce"
                header=""
                subheader=""
              >
                <Content>
                  <div
                    className="c2"
                  >
                    <List.Header>
                      <Header>
                        <span
                          className="c3"
                        >
                          Barbecue sauce
                        </span>
                      </Header>
                    </List.Header>
                  </div>
                </Content>
              </List.Content>
            </div>
          </ListItem>
        </li>
      </List.Item>
      <List.Item
        bullet=""
        content="Red-wine vinegar"
        icon=""
        key="Red-wine vinegar"
      >
        <li>
          <ListItem
            bullet=""
          >
            <div
              className="c1"
            >
              <List.Content
                content="Red-wine vinegar"
                header=""
                subheader=""
              >
                <Content>
                  <div
                    className="c2"
                  >
                    <List.Header>
                      <Header>
                        <span
                          className="c3"
                        >
                          Red-wine vinegar
                        </span>
                      </Header>
                    </List.Header>
                  </div>
                </Content>
              </List.Content>
            </div>
          </ListItem>
        </li>
      </List.Item>
      <List.Item
        bullet=""
        content="Salsa"
        icon=""
        key="Salsa"
      >
        <li>
          <ListItem
            bullet=""
          >
            <div
              className="c1"
            >
              <List.Content
                content="Salsa"
                header=""
                subheader=""
              >
                <Content>
                  <div
                    className="c2"
                  >
                    <List.Header>
                      <Header>
                        <span
                          className="c3"
                        >
                          Salsa
                        </span>
                      </Header>
                    </List.Header>
                  </div>
                </Content>
              </List.Content>
            </div>
          </ListItem>
        </li>
      </List.Item>
      <List.Item
        bullet=""
        content="Hot pepper sauce"
        icon=""
        key="Hot pepper sauce"
      >
        <li>
          <ListItem
            bullet=""
          >
            <div
              className="c1"
            >
              <List.Content
                content="Hot pepper sauce"
                header=""
                subheader=""
              >
                <Content>
                  <div
                    className="c2"
                  >
                    <List.Header>
                      <Header>
                        <span
                          className="c3"
                        >
                          Hot pepper sauce
                        </span>
                      </Header>
                    </List.Header>
                  </div>
                </Content>
              </List.Content>
            </div>
          </ListItem>
        </li>
      </List.Item>
    </ul>
  </UnorderedList>
</List>
`;
